--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -165,8 +165,8 @@
         &__pack {
           display: flex;
           flex-wrap: wrap;
-          &__icon {
-          }
+          // &__icon {
+          // }
           &__text {
             font-size: 1rem;
             font-weight: 600;
