--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -7,6 +7,7 @@
   margin: 0 auto;
   width: 101.625em;
   min-width: 62.5em;
+  box-sizing: border-box;
 }
 
 @mixin logo {
@@ -15,9 +16,17 @@
   font-weight: 300;
   line-height: 2.3125em;
   color: $color-primary;
-  margin: 0;
-  padding: 1.125em 0em 1.125em 1.5625em;
   text-align: left;
+}
+
+@mixin button {
+  border-radius: 25%;
+  font-family: $font-secondary;
+  border-color: transparent;
+  border-radius: 40px;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
 }
 
 //section2
@@ -25,7 +34,7 @@
 @mixin __card {
   margin: 1.1875em auto 1.125em;
   width: 19.6875em;
-  border-radius: .3125em;
+  border-radius: 0.3125em;
   display: inline-block;
   background-color: #fff;
 }
@@ -45,7 +54,7 @@
 }
 
 @mixin title {
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 400;
   line-height: 2.2012em;
   text-align: left;
@@ -55,7 +64,7 @@
 
 @mixin text {
   font-family: $font-secondary;
-  font-size: .875rem;
+  font-size: 14px;
   font-weight: 600;
   line-height: 1.3125em;
   text-align: left;
