--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,29 +1,27 @@
 header {
   display: block;
   width: 100%;
-  margin: 0rem auto;
+  margin: 0px auto;
   text-align: center;
 
   h1 {
-    width: 10.125em;
-    font-size: 2.1875rem;
+    font-size: 35px;
     font-weight: 400;
     line-height: 2.5681em;
-    margin: 6.5625em auto 1.375em auto;
+    margin: 2.1em auto 0;
   }
 
   p {
-    width: 17.8125em;
     font-family: $font-secondary;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1.4375em;
-    margin: 0 auto .4375em;
+    margin: 0 3em .4375em;
   }
 
   button {
+    @include button;
     box-shadow: .3125em .625em .875em 0em #07ace64a;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 700;
     margin: 1.4375em auto 3.375em;
     padding: 1.375em 5.625em;
@@ -38,21 +36,21 @@ header {
 
     &__img {
       width: 100%;
-      height: 267px;
+      height: 16.6875rem;
       display: block;
       object-fit: cover;
-      margin: 0rem auto;
+      margin: 0px auto;
     }
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 62.5rem) {
   header {
     width: 100%;
 
     h1 {
       width: 15.125em;
-      font-size: 3.0625rem;
+      font-size: 49px;
       font-weight: 400;
       line-height: 3.5625em;
       text-align: center;
@@ -61,7 +59,7 @@ header {
     p {
       width: 25em;
       font-family: Open Sans;
-      font-size: 1rem;
+      font-size: 16px;
       font-weight: 400;
       line-height: 1.375em;
     }
@@ -69,7 +67,7 @@ header {
     button {
       line-height: 1.375em;
       text-align: center;
-      font-size: 1rem;
+      font-size: 16px;
       font-weight: 700;
       margin: 1.4375em auto 0em;
       padding: 1.375em 9.6875em;
